[gd_scene load_steps=13 format=3 uid="uid://b1qaewqhhtlyv"]

[ext_resource type="Script" uid="uid://33jq8awpywg7" path="res://screens/start_menus/about_menu/submenu_selector/submenu_selector.gd" id="1_3ysg1"]
[ext_resource type="PackedScene" uid="uid://yaecy5i836q2" path="res://screens/start_menus/about_menu/submenu_selector/submenu_btn/submenu_btn.tscn" id="2_7r885"]
[ext_resource type="PackedScene" uid="uid://ci2txb162q4g2" path="res://screens/start_menus/about_menu/submenus/disclaimer/background/stalingrad_summer_bg.tscn" id="3_d0p5s"]
[ext_resource type="Texture2D" uid="uid://b26l7efnw6gdo" path="res://screens/start_menus/about_menu/submenu_selector/assets/credits_button.png" id="6_c0601"]
[ext_resource type="PackedScene" uid="uid://dt3fjh0hkvrps" path="res://screens/start_menus/about_menu/submenus/credits/background/stalingrad_winter_bg.tscn" id="6_rnexu"]
[ext_resource type="PackedScene" uid="uid://dl8jl1cc866s3" path="res://screens/start_menus/about_menu/submenus/disclaimer/popup/disclaimer.tscn" id="6_wrkmi"]
[ext_resource type="Texture2D" uid="uid://pixdbdoy1t3t" path="res://screens/start_menus/about_menu/submenu_selector/assets/credits_button_selected.png" id="7_wrkmi"]
[ext_resource type="PackedScene" uid="uid://dklgxgubuedln" path="res://screens/start_menus/about_menu/submenus/credits/popup/credits.tscn" id="10_aakj1"]

[sub_resource type="Shader" id="Shader_1ie7j"]
code = "
shader_type canvas_item;

uniform float hue : hint_range(0.0, 6.283185) = 0.0;
uniform float saturation : hint_range(0.0, 2.0) = 1.0;
uniform float brightness : hint_range(0.0, 2.0) = 1.0;

void fragment() {

    vec4 col = texture(TEXTURE, UV);

    float alpha = col.a;

    vec3 color = col.rgb;


    mat3 RGB_to_YIQ = mat3(
        vec3(0.2989, 0.5959, 0.2115),
        vec3(0.5870, -0.2774, -0.5229),
        vec3(0.1140, -0.3216, 0.3114)
    );
    color = RGB_to_YIQ * color;

    float sin_hue = sin(hue);
    float cos_hue = cos(hue);
	
    mat3 hue_Shift = mat3(
        vec3(1.0, 0, 0),
        vec3(0, cos_hue, -sin_hue),
        vec3(0, sin_hue, cos_hue)
    );
    color = hue_Shift * color;

    mat3 sat_Shift = mat3(
        vec3(1, 0, 0),
        vec3(0, saturation, 0),
        vec3(0, 0, saturation)
    );
    color = sat_Shift * color;

    color = inverse(RGB_to_YIQ) * color;
	
	color.rgb = mix(vec3(0.0), color.rgb, brightness);
	
    col.rgb = color;
    col.a = alpha;
    COLOR = col;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mt172"]
shader = SubResource("Shader_1ie7j")
shader_parameter/hue = 0.0
shader_parameter/saturation = 0.0
shader_parameter/brightness = 0.7

[sub_resource type="Shader" id="Shader_7oksi"]
code = "
shader_type canvas_item;

uniform float hue : hint_range(0.0, 6.283185) = 0.0;
uniform float saturation : hint_range(0.0, 2.0) = 1.0;
uniform float brightness : hint_range(0.0, 2.0) = 1.0;

void fragment() {

    vec4 col = texture(TEXTURE, UV);

    float alpha = col.a;

    vec3 color = col.rgb;


    mat3 RGB_to_YIQ = mat3(
        vec3(0.2989, 0.5959, 0.2115),
        vec3(0.5870, -0.2774, -0.5229),
        vec3(0.1140, -0.3216, 0.3114)
    );
    color = RGB_to_YIQ * color;

    float sin_hue = sin(hue);
    float cos_hue = cos(hue);
	
    mat3 hue_Shift = mat3(
        vec3(1.0, 0, 0),
        vec3(0, cos_hue, -sin_hue),
        vec3(0, sin_hue, cos_hue)
    );
    color = hue_Shift * color;

    mat3 sat_Shift = mat3(
        vec3(1, 0, 0),
        vec3(0, saturation, 0),
        vec3(0, 0, saturation)
    );
    color = sat_Shift * color;

    color = inverse(RGB_to_YIQ) * color;
	
	color.rgb = mix(vec3(0.0), color.rgb, brightness);
	
    col.rgb = color;
    col.a = alpha;
    COLOR = col;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jyeyh"]
shader = SubResource("Shader_7oksi")
shader_parameter/hue = 0.0
shader_parameter/saturation = 0.0
shader_parameter/brightness = 0.7

[node name="SubmenuSelector" type="Control"]
layout_mode = 3
anchors_preset = 0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 6
size_flags_vertical = 4
script = ExtResource("1_3ysg1")

[node name="SubmenuButtons" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_left = 76.0
offset_top = 190.0
offset_right = 351.0
offset_bottom = 770.0
theme_override_constants/separation = 30

[node name="SubmenuBtn" parent="SubmenuButtons" instance=ExtResource("2_7r885")]
material = SubResource("ShaderMaterial_mt172")
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
background_scene = ExtResource("3_d0p5s")
popup_scene = ExtResource("6_wrkmi")

[node name="SubmenuBtn2" parent="SubmenuButtons" instance=ExtResource("2_7r885")]
material = SubResource("ShaderMaterial_jyeyh")
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("6_c0601")
texture_focused = ExtResource("7_wrkmi")
background_scene = ExtResource("6_rnexu")
popup_scene = ExtResource("10_aakj1")
